@@ -1,4 +1,9 @@
 2009-03-04  Dustin J. Mitchell <dustin@zmanda.com>
+	* perl/Amanda/Changer/rait.pm: add a slot-name shorthand
+	* installcheck/Amanda_Changer_rait.pl: test it
+	* man/xml-source/amanda-changers.7.xml: document it
+
+2009-03-04  Dustin J. Mitchell <dustin@zmanda.com>
 	* device-src/rait-device.c: fix failure when parity (last) child
 	  has failed
 	* installcheck/Amanda_Device.pl: test the fix
